Version 0.1:
  - initial release
  - based on SVDLIBC version 1.4