@@ -1,2 +1,3 @@
+importFrom(Matrix, sparseMatrix)
 useDynLib(sparsesvd, svdLAS2_)
 export(sparsesvd)
